--- a/tasks.json
+++ b/tasks.json
@@ -1,7 +1,1 @@
-[
-    {
-        "id": 1,
-        "name": "some name",
-        "complete": false
-    }
-]
+[{"id":2,"name":"task two","complete":true},{"id":5,"name":"job new","complete":true}]
